--- a/index.html
+++ b/index.html
@@ -179,7 +179,105 @@
     </header>
 
     <!-- Main Section -->
-    <main></main>
+    <main class="max-w-[90%] mx-auto">
+      <!-- Featured Bike Section -->
+      <section class="mt-40 text-center">
+        <h2 class="text-5xl font-semibold text-black">
+          Fetured Bikes In This Year
+        </h2>
+        <p class="text-orange-500 font-semibold mt-2">Best Bike Collection</p>
+        <div class="border border-orange-500 w-16 mx-auto"></div>
+        <div
+          class="grid grid-cols-1 justify-items-center md:grid-cols-2 lg:grid-cols-3 gap-8 md:gap-32 my-12"
+        >
+          <figure>
+            <img
+              class="grayscale"
+              src="./images/others/feature-bike.png"
+              alt=""
+            />
+          </figure>
+          <figure>
+            <img src="./images/others/feature-bike.png" alt="" />
+          </figure>
+          <figure>
+            <img
+              class="grayscale"
+              src="./images/others/feature-bike.png"
+              alt=""
+            />
+          </figure>
+        </div>
+      </section>
+
+      <!-- Latest Bike Section -->
+      <section class="my-24">
+        <h3 class="text-5xl font-bold text-center mb-12 text-black">
+          Latest Bikes
+        </h3>
+        <!-- Cards -->
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12">
+          <!-- Card-1 -->
+          <div class="card bg-base-100 shadow-xl space-y-5">
+            <figure>
+              <img src="./images/others/latest1.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+              <p class="text-left">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <div class="card-actions">
+                <button class="btn bg-bike-primary text-white">
+                  Read More
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- Card-2 -->
+          <div class="card bg-base-100 shadow-xl space-y-5">
+            <figure>
+              <img src="./images/others/latest2.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title">Motorcycles & Scooters</h2>
+              <p class="text-left">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <div class="card-actions">
+                <button
+                  class="btn bg-transparent text-red-400 border border-red-400"
+                >
+                  Read More
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- Card-3 -->
+          <div class="card bg-base-100 shadow-xl space-y-5">
+            <figure>
+              <img src="./images/others/latest3.png" alt="Shoes" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title">2021 Honda CBR500R</h2>
+              <p class="text-left">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                fermentum amet faucibus sed id nisi lectus at.
+              </p>
+              <div class="card-actions">
+                <button
+                  class="btn bg-transparent text-red-400 border border-red-400"
+                >
+                  Read More
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <!-- Footer Section -->
     <footer></footer>
